Fixing Contact Alignment

--- a/Resources/CSS/site.css
+++ b/Resources/CSS/site.css
@@ -774,6 +774,10 @@ section {
 /*||||||||||||||||||||||||||||||||||||||||||||||||||||||
 ----> Contact
 ||||||||||||||||||||||||||||||||||||||||||||||||||||||*/
+.contact .info {
+  width: 100%;
+  background: #fff;
+}
 
 .contact .info i {
   font-size: 20px;
@@ -787,11 +791,10 @@ section {
   align-items: center;
   border-radius: 50px;
   transition: all 0.3s ease-in-out;
-  margin-left:60px;
 }
 
 .contact .info h4 {
-  padding-left: 120px;
+  padding-left: 60px;
   font-size: 22px;
   font-weight: 600;
   margin-bottom: 5px;
@@ -799,8 +802,8 @@ section {
 }
 
 .contact .info p {
-  padding-left: 120px;
-  margin-bottom: 20px;
+  padding-left: 60px;
+  margin-bottom: 0;
   font-size: 14px;
   color: #728394;
 }
